Final Spacing Issue before header

--- a/css/references.css
+++ b/css/references.css
@@ -41,7 +41,7 @@
   position: absolute;
   top: 475px;
   opacity: 0.6;
-  width: 99.2%;
+  width: 99.25%;
   height: 300px;
   border: 5px solid rgb(48, 25, 52);
 }
@@ -86,7 +86,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1100px;
+  top: 1105px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
